fix: code block overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,10 @@
 @tailwind utilities;
 /* Stop purging. */
 
+body {
+  overflow-x: hidden;
+}
+
 .code:hover .copyToClipboard {
   opacity: 1;
 }
